welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:13: error: reassignment to val
    memoire = -1
            ^ZigZag:18: error: reassignment to val
    memoire = 1
            ^